--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "habit-breaker-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Backend API for Habit Breaker Chrome Extension",
   "main": "server.js",
   "scripts": {
@@ -8,16 +9,20 @@
     "dev": "nodemon server.js",
     "generate-voices": "node -e \"require('./elevenlabs-integration').preGenerateMessages()\""
   },
-  "keywords": ["elevenlabs", "voice-ai", "productivity"],
+  "keywords": [
+    "elevenlabs",
+    "voice-ai",
+    "productivity"
+  ],
   "author": "Your Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "groq-sdk": "^0.37.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
-
