feat: Add Churchill voice personality and complete email system
🇬🇧 Churchill Voice Features:
- Upgraded ElevenLabs to Creator tier
- Generated 4 Churchill-style British accent voice files
- Added Churchill personality with LLM dynamic messages
- Integrated Churchill photo (Winston-Churchill.webp) in intervention UI
- Updated UI with 🇬🇧 icon and 'Prime Minister Says:' for Churchill mode
- Optimized voice parameters for deeper, more authoritative tone

📧 Email System:
- Integrated nodemailer for email delivery
- Added Gmail SMTP configuration
- Created daily report HTML/text generation
- Added /api/send-email-report and /api/test-email endpoints
- Created comprehensive EMAIL_SETUP.md and EMAIL_CONFIG.md guides

📊 Daily Report System:
- Implemented daily-report-service.js with stats, achievements, advice
- Added n8n workflow configuration (n8n-workflow-daily-report.json)
- Created preview endpoint: /api/daily-report/preview
- All reports in English with professional formatting

🔧 Backend Improvements:
- Enhanced LLM service with 4 voice personalities (mom/idol/coach/churchill)
- Updated server.js with voice-based audio file selection
- Added voice parameter support in API endpoints
- Integrated email status check in health endpoint

🎨 Extension Updates:
- Added Churchill button to popup UI (4 voice options now)
- Updated content.js to show Churchill photo conditionally
- Enhanced manifest.json with image resources support
- Added voiceType parameter to intervention requests

📚 Documentation:
- Created CLERK_SETUP.md for authentication
- Created RELOAD_EXTENSION.md for troubleshooting
- Created N8N_DAILY_REPORT.md for automation
- Removed outdated docs (FREE_LLM_OPTIONS, HACKATHON_READY, QUICK_REFERENCE)

🎯 For British Judges:
This update adds special Churchill voice personality tailored for UK hackathon judges,
featuring authentic British accent, Churchill's photo, and wartime rhetoric style messages
generated by Groq LLM.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,10 +7,13 @@
     "tabs",
     "storage",
     "scripting",
-    "alarms"
+    "alarms",
+    "identity"
   ],
   "host_permissions": [
-    "<all_urls>"
+    "<all_urls>",
+    "https://*.clerk.accounts.dev/*",
+    "https://api.clerk.dev/*"
   ],
   "background": {
     "service_worker": "background.js"
@@ -27,9 +30,17 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["assets/voices/*.mp3"],
+      "resources": [
+        "assets/voices/*.mp3", 
+        "assets/images/*.jpg",
+        "assets/images/*.webp",
+        "clerk-config.js"
+      ],
       "matches": ["<all_urls>"]
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
 
