🔑 Update TEAM_SETUP.md with secure API key sharing
Changes:
- Modified .env template to use placeholder keys
- Added instructions to request keys from team lead (secure method)
- Added PRIVATE_TEAM_CONFIG.txt to .gitignore
- Created local PRIVATE_TEAM_CONFIG.txt for team sharing (not in git)
- Simplified setup instructions
- Added team message template
- Added quick command reference
- Added hackathon demo checklist

Security improvements:
- API keys NOT stored in GitHub (following GitHub security policies)
- Keys shared privately via Slack/Discord/Line
- PRIVATE_TEAM_CONFIG.txt excluded from git

Team members now just need to:
1. git clone
2. npm install
3. Request .env config from Jessi
4. node server.js
5. Load extension
Done! ✨

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ yarn.lock
 .env.*.local
 backend/.env
 
+# Private team configuration (contains API keys)
+PRIVATE_TEAM_CONFIG.txt
+
 # Build outputs
 dist/
 build/
